--- a/Examples _ End-to-End Neural Entity Linking.ipynb
+++ b/Examples _ End-to-End Neural Entity Linking.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -23,7 +23,7 @@
        "<Response [200]>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
     "    ## Takes the input string and passes it to the service and gets the reponse back.\n",
     "    myjson = { \"text\": text, \"spans\": []  }\n",
     "    r = requests.post(\"http://localhost:5555\", json=myjson)\n",
-    "    return json.loads(r.content)\n",
+    "    return json.loads(r.content.decode('utf-8'))\n",
     "\n",
     "def printmd(string):\n",
     "    ## displays the annotated/tagged input text in jupyter's Markdown format\n",
@@ -97,19 +97,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
     "text = [\"Eminem is the best rapper of all time. MMLP was his best album, Eminem and Dre have produced this album\",\n",
     "        \"Pakistan has one of the best teams in cricket. The pakistani squad for ICC Cricket World Cup has Shahid Afridi and Shoaib Akhtar\",\n",
-    "        \"KIEV: Separatist rebels have not fulfilled conditions like handing back border posts or laying down their weapons, Ukraine’s president said on Monday in a phone call with the leaders of Russia, Germany and France as he pondered whether to extend a ceasefire.The call between President Petro Poroshenko, Russia’s Vladimir Putin, Germany’s Chancellor Angela Merkel and France’s Francois Hollande took place as an expiration deadline neared for Ukraine’s shaky, unilateral ceasefire\"\n",
+    "        \"KIEV: Separatist rebels have not fulfilled conditions like handing back border posts or laying down their weapons, Ukraine’s president said on Monday in a phone call with the leaders of Russia, Germany and France as he pondered whether to extend a ceasefire.The call between President Petro Poroshenko, Russia’s Vladimir Putin, Germany’s Chancellor Angela Merkel and France’s Francois Hollande took place as an expiration deadline neared for Ukraine’s shaky, unilateral ceasefire\",\n",
+    "        '''Brexit Party founder Catherine Blaiklock who resigned from the party after posting a series of anti-Islam comments has backed Boris Johnson’s Conservatives.\n",
+    "\n",
+    "Ms Blaiklock, who set up the party and registered its name, accused Nigel Farage of going on a “monumental ego trip” and said his general election strategy had been a “disaster”.\n",
+    "\n",
+    "“Nigel has failed catastrophically,” she told The Sun newspaper. “You have to compromise. If you want Brexit, you must vote Tory.\"\n",
+    "\n",
+    "But opposition parties at Westminster seized on the endorsement, and the Liberal Democrat deputy leader Ed Davey said: “Catherine joins a long list of unsavoury characters, including Tommy Robinson, who are now backing Boris Johnson.”\n",
+    "\n",
+    "He added: “The fact that Sir John Major, Michael Heseltine and others are urging voters to keep the Tories out of power shows quite how far this Conservative party has sunk.”\n",
+    "\n",
+    "Ms Blaiklock resigned from the Brexit Party earlier this year after a series of anti-Islam messages were uncovered by the Hope Not Hate organisation, which monitors the the far-right.\n",
+    "\n",
+    "According to The Guardian, one of the messages shared by Ms Blaiklock was from a former BNP acivtist which referred to “white genocide” while one of her own remarks read: “Islam = submission – mostly raping men it seems”.'''\n",
     "       ]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 49,
    "metadata": {
     "scrolled": true
    },
@@ -149,6 +162,30 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "Brexit Party founder Catherine Blaiklock who resigned from the party after posting a series of anti-Islam comments has backed [Boris Johnson](https://en.wikipedia.org/wiki/Boris_Johnson)’s [Conservatives](https://en.wikipedia.org/wiki/Conservative_Party_(UK)).\n",
+       "\n",
+       "Ms Blaiklock, who set up the party and registered its name, accused [Nigel Farage](https://en.wikipedia.org/wiki/Nigel_Farage) of going on a “monumental ego trip” and said his general election strategy had been a “disaster”.\n",
+       "\n",
+       "“[Nigel](https://en.wikipedia.org/wiki/Nigel_Farage) has failed catastrophically,” she told [The Sun](https://en.wikipedia.org/wiki/The_Sun_(United_Kingdom)) newspaper. “You have to compromise. If you want Brexit, you must vote [Tory](https://en.wikipedia.org/wiki/Tory).\"\n",
+       "\n",
+       "But opposition parties at [Westminster](https://en.wikipedia.org/wiki/Westminster) seized on the endorsement, and the [Liberal Democrat](https://en.wikipedia.org/wiki/Liberal_Democrats) deputy leader Ed Davey said: “Catherine joins a long list of unsavoury characters, including Tommy Robinson, who are now backing Boris Johnson.”\n",
+       "\n",
+       "He added: “The fact that Sir [John Major](https://en.wikipedia.org/wiki/John_Major), [Michael Heseltine](https://en.wikipedia.org/wiki/Michael_Heseltine) and others are urging voters to keep the [Tories](https://en.wikipedia.org/wiki/Tory) out of power shows quite how far this [Conservative](https://en.wikipedia.org/wiki/Conservative_Party_(UK)) party has sunk.”\n",
+       "\n",
+       "Ms Blaiklock resigned from the Brexit Party earlier this year after a series of anti-Islam messages were uncovered by the Hope Not Hate organisation, which monitors the the far-right.\n",
+       "\n",
+       "According to [The Guardian](https://en.wikipedia.org/wiki/The_Guardian), one of the messages shared by Ms Blaiklock was from a former [BNP](https://en.wikipedia.org/wiki/British_National_Party) acivtist which referred to “white genocide” while one of her own remarks read: “[Islam](https://en.wikipedia.org/wiki/Islam) = submission – mostly raping men it seems”."
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -166,9 +203,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:end2end_nel]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-end2end_nel-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -180,7 +217,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
